network-policy/backend-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: app1-ns
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: app1
      role: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app1
          role: frontend
    ports:
    - protocol: TCP
      port: 5678
  egress:
  - to:
    - podSelector:
        matchLabels:
         app: app1
         role: db
    ports:
    - port: 3306
      protocol: TCP

  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
