network-policy/db-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  namespace: app1-ns
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: app1
      role: db
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: app1
            role: backend
    ports:
    - protocol: TCP
      port: 3306
