network-policy/frontend-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: frontend-policy
 namespace: app1-ns
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: app1
      role: backend
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0

    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: app1
          role: backend
    ports:
    - port: 5678
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
